syntax = "proto3";

import "basic.proto";

option go_package = "github.com/piliphulko/marketplace-example/internal/service/microserver-account-authentication/core";
//protoc -I . microserver-account-authentication.proto --go_out=../../../.. --go-grpc_out=../../../..

package microserver_account_authentication;

service AccountAut {
    rpc AutAccount(basic.LoginPass) returns (basic.Reply);
    rpc CreateAccount(basic.AccountInfo) returns (basic.Reply);
    rpc UpdateAccount(basic.AccountInfo) returns (basic.Reply);
}
